# shop/api/static/swagger.json
@@ -431,7 +431,23 @@
         "tags": [
           "Product"
         ],
-        "deprecated": true,
+        "parameters": [
+          {
+            "in": "path",
+            "name": "product_id",
+            "description": "Product Id",
+            "type": "number",
+            "required": true
+          },
+          {
+            "in": "body",
+            "name": "body",
+            "schema": {
+              "$ref": "#/definitions/ProductReview"
+            }
+          }
+        ],
+        "deprecated": false,
         "summary": "Add a customer review for a product.",
         "description": "",
         "operationId": "addProductReview",
@@ -445,8 +461,8 @@
               "$ref": "#/definitions/ProductReview"
             }
           },
-          "400": {
-            "description": "Invalid ProductReview"
+          "404": {
+            "description": "No prouduct with this id"
           }
         }
       },
@@ -454,8 +470,17 @@
         "tags": [
           "Product"
         ],
-        "deprecated": true,
-        "summary": "Get review of a product.",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "product_id",
+            "description": "Product Id",
+            "type": "number",
+            "required": true
+          }
+        ],
+        "deprecated": false,
+        "summary": "Get reviews of a product.",
         "description": "",
         "operationId": "getProductReview",
         "produces": [
